[package]
name = "kozo"
version = "0.1.0"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]
description = "syntax sugars for structs"
documentation = "https://docs.rs/kozo/"
homepage = "https://crates.io/crates/kozo"
repository = "https://github.com/kana-rus/kozo"
readme = "README.md"
keywords = ["struct", "syntax-sugar"]
categories = ["rust-patterns"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true